; ModuleID = '/home/carl/AnghaBench/linux/net/dccp/extr_ackvec.c_dccp_ackvec_update_old.c'
source_filename = "/home/carl/AnghaBench/linux/net/dccp/extr_ackvec.c_dccp_ackvec_update_old.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dccp_ackvec = type { i32, i32, i64* }

@DCCPAV_NOT_RECEIVED = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [31 x i8] c"Not changing %llu state to %u\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dccp_ackvec*, i64, i64, i32)* @dccp_ackvec_update_old to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dccp_ackvec_update_old(%struct.dccp_ackvec* %0, i64 %1, i64 %2, i32 %3) #0 {
  %5 = alloca %struct.dccp_ackvec*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  store %struct.dccp_ackvec* %0, %struct.dccp_ackvec** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load %struct.dccp_ackvec*, %struct.dccp_ackvec** %5, align 8
  %12 = getelementptr inbounds %struct.dccp_ackvec, %struct.dccp_ackvec* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  store i32 %13, i32* %9, align 4
  %14 = load i64, i64* %6, align 8
  %15 = icmp sgt i64 %14, 0
  %16 = zext i1 %15 to i32
  %17 = call i32 @BUG_ON(i32 %16)
  %18 = load %struct.dccp_ackvec*, %struct.dccp_ackvec** %5, align 8
  %19 = call i32 @dccp_ackvec_is_empty(%struct.dccp_ackvec* %18)
  %20 = call i64 @unlikely(i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %4
  br label %73

23:                                               ; preds = %4
  br label %24

24:                                               ; preds = %67, %23
  %25 = load %struct.dccp_ackvec*, %struct.dccp_ackvec** %5, align 8
  %26 = getelementptr inbounds %struct.dccp_ackvec, %struct.dccp_ackvec* %25, i32 0, i32 2
  %27 = load i64*, i64** %26, align 8
  %28 = load i32, i32* %9, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i64, i64* %27, i64 %29
  %31 = call i64 @dccp_ackvec_runlen(i64* %30)
  store i64 %31, i64* %10, align 8
  %32 = load i64, i64* %6, align 8
  %33 = load i64, i64* %10, align 8
  %34 = add nsw i64 %32, %33
  %35 = icmp sge i64 %34, 0
  br i1 %35, label %36, label %60

36:                                               ; preds = %24
  %37 = load %struct.dccp_ackvec*, %struct.dccp_ackvec** %5, align 8
  %38 = getelementptr inbounds %struct.dccp_ackvec, %struct.dccp_ackvec* %37, i32 0, i32 2
  %39 = load i64*, i64** %38, align 8
  %40 = load i32, i32* %9, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds i64, i64* %39, i64 %41
  %43 = load i64, i64* %42, align 8
  %44 = load i64, i64* @DCCPAV_NOT_RECEIVED, align 8
  %45 = icmp eq i64 %43, %44
  br i1 %45, label %46, label %55

46:                                               ; preds = %36
  %47 = load i32, i32* %8, align 4
  %48 = zext i32 %47 to i64
  %49 = load %struct.dccp_ackvec*, %struct.dccp_ackvec** %5, align 8
  %50 = getelementptr inbounds %struct.dccp_ackvec, %struct.dccp_ackvec* %49, i32 0, i32 2
  %51 = load i64*, i64** %50, align 8
  %52 = load i32, i32* %9, align 4
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds i64, i64* %51, i64 %53
  store i64 %48, i64* %54, align 8
  br label %59

55:                                               ; preds = %36
  %56 = load i64, i64* %7, align 8
  %57 = load i32, i32* %8, align 4
  %58 = call i32 @dccp_pr_debug(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i64 %56, i32 %57)
  br label %59

59:                                               ; preds = %55, %46
  br label %73

60:                                               ; preds = %24
  %61 = load i64, i64* %10, align 8
  %62 = add nsw i64 %61, 1
  %63 = load i64, i64* %6, align 8
  %64 = add nsw i64 %63, %62
  store i64 %64, i64* %6, align 8
  %65 = load i32, i32* %9, align 4
  %66 = call i32 @__ackvec_idx_add(i32 %65, i32 1)
  store i32 %66, i32* %9, align 4
  br label %67

67:                                               ; preds = %60
  %68 = load i32, i32* %9, align 4
  %69 = load %struct.dccp_ackvec*, %struct.dccp_ackvec** %5, align 8
  %70 = getelementptr inbounds %struct.dccp_ackvec, %struct.dccp_ackvec* %69, i32 0, i32 1
  %71 = load i32, i32* %70, align 4
  %72 = icmp ne i32 %68, %71
  br i1 %72, label %24, label %73

73:                                               ; preds = %22, %67, %59
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @dccp_ackvec_is_empty(%struct.dccp_ackvec*) #1

declare dso_local i64 @dccp_ackvec_runlen(i64*) #1

declare dso_local i32 @dccp_pr_debug(i8*, i64, i32) #1

declare dso_local i32 @__ackvec_idx_add(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
